--- a/css/length-indicator.css
+++ b/css/length-indicator.css
@@ -1,39 +1,39 @@
 .indicator {
-    background: #DDD;
-    width: 100%;
-    height: 10px;
-    border-radius: 2px;
-    opacity: 0.2;
+  background: #ddd;
+  width: 100%;
+  height: 10px;
+  border-radius: 2px;
+  opacity: 0.2;
 }
 
 .indicator.bad {
-     background: red;
+  background: red;
 }
 .indicator.ok {
-     background: orange;
+  background: orange;
 }
 .indicator.good {
-     background: green;
+  background: green;
 }
 
 .indicator-wrap {
-    display: flex;
-    position: relative;
+  display: flex;
+  position: relative;
 }
 
 .active {
-    opacity: 1;
+  opacity: 1;
 }
 
 .cursor {
-    position: absolute;
-    left: 0;
-    top: 10px;
-    width: 0;
-    height: 0;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-bottom: 8px solid black;
-    margin-left: -4px;
-    margin-right: -4px;
+  position: absolute;
+  left: 0;
+  top: 10px;
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 8px solid black;
+  margin-left: -4px;
+  margin-right: -4px;
 }
