--- a/css/length-indicator.css
+++ b/css/length-indicator.css
@@ -1,30 +1,30 @@
-.indicator {
+.length-indicator__indicator {
   background: #ddd;
   width: 100%;
   height: 10px;
   opacity: 0.2;
 }
 
-.indicator.bad {
+.length-indicator__indicator--bad {
   background: red;
 }
-.indicator.ok {
+.length-indicator__indicator--ok {
   background: orange;
 }
-.indicator.good {
+.length-indicator__indicator--good {
   background: green;
 }
 
-.indicator-wrap {
+.length-indicator {
   display: flex;
   position: relative;
 }
 
-.active {
+.length-indicator__indicator.is-active {
   opacity: 1;
 }
 
-.cursor {
+.length-indicator__cursor {
   position: absolute;
   left: 0;
   top: 10px;
