--- a/templates/length-indicator.html.twig
+++ b/templates/length-indicator.html.twig
@@ -1,10 +1,10 @@
-<div class="indicator-wrap">
+<div class="length-indicator">
     {% for indicator in indicators %}
         <span
-                class="indicator {{ indicator['class'] }}"
+                class="length-indicator__indicator {{ indicator['class'] }}"
                 data-pos="{{ indicator['pos'] }}"
                 style="width: {{ indicator['width'] }}%"
         ></span>
     {% endfor %}
-    <div class="cursor"></div>
+    <div class="length-indicator__cursor"></div>
 </div>
